chore: update swagger docs and add prometheus metrics docs
